--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sass": "sass --watch ./src/sass/main.scss:./dist/style/css/style.css",
+    "sass": "sass --watch ./src/sass/main.scss:./dist/css/style.css",
     "prod": "webpack --mode=production",
     "dev": "webpack --mode=development"
   },
