--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "sass": "sass --watch ./src/sass/main.scss:./dist/css/style.css",
+    "sassprod" : "sass --watch ./src/sass/main.scss:./dist/css/style.css --style compressed",
     "prod": "webpack --mode=production",
     "dev": "webpack --mode=development"
   },
